--- a/src/components/Facebook.css
+++ b/src/components/Facebook.css
@@ -1,7 +1,34 @@
+/* Facebook Component */
+.country-buttons {
+  display: flex;
+  gap: 10px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  font-size: 20px;
+  color: black;
+}
+
+.country-buttons button {
+  background-color: white; /* Set the initial background color to white */
+  color: black;
+  border: 1px solid lightgrey;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s; /* Add transition for smooth color change */
+}
+
+.country-buttons button:hover {
+  background-color: lightskyblue; /* Change background color on hover */
+}
+
+body .country-buttons {
+  padding-left: 10px;
+}
+
 /* ID Card Section */
 .id-card {
   border: 4px solid #000000;
-  padding: px;
   margin: 8px;
   display: flex;
   align-items: center;
@@ -9,11 +36,16 @@
   margin-right: 13px;
 }
 
+.id-card.selected-country {
+  background-color: lightskyblue;
+  color: white;
+}
+
 .picture {
   margin-right: 16px;
-  padding-left: 2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .picture img {
