--- a/src/components/LikeButton.css
+++ b/src/components/LikeButton.css
@@ -4,7 +4,7 @@
   border: 2px;
   cursor: pointer;
   border-radius: 2px;
-  margin: 10px; /* Added margin between buttons */
+  margin: 10px;
   position: relative;
 }
 
