--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,8 +1,9 @@
 .carousel {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; /* Align items to the left */
     align-items: center;
   }
+  
   
   .carousel img {
     max-width: 300px;
